@@ -3,6 +3,7 @@ ver 0.20.3 (not yet released)
   - "playlistadd" creates new playlist if it does not exist, as documented
 * database
   - proxy: fix error "terminate called after throwing ..."
+  - proxy: make connect errors during startup non-fatal
 * replay gain: don't reset ReplayGain levels when unpausing playback
 * silence surround channels when converting from stereo
 * use shortcuts such as "dsd64" in log messages
